--- a/.classpath
+++ b/.classpath
@@ -3,10 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/hadoop-core-1.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/lib/commons-logging-1.2-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
